samples/_failures_safe/1761273569_51b6aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c776e03.c: In function ‘main’:
./samples/SAFE/__tmp_8c776e03.c:150:13: error: ‘strnc’ undeclared (first use in this function); did you mean ‘strncmp’?
  150 |             strnc
      |             ^~~~~
      |             strncmp
./samples/SAFE/__tmp_8c776e03.c:150:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8c776e03.c:150:18: error: expected ‘;’ at end of input
  150 |             strnc
      |                  ^
      |                  ;
./samples/SAFE/__tmp_8c776e03.c:150:13: error: expected declaration or statement at end of input
  150 |             strnc
      |             ^~~~~
./samples/SAFE/__tmp_8c776e03.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c776e03.c:150:13: error: expected declaration or statement at end of input
